# SMPL_PSU

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/blender_files/blends/: SMPLX_FEMALE.blend
assets/blender_files/scripts/: Save_verts_script  load_vert_files
scripts/: gen_viz.py  test_com.py
smpl_psu/blender_support/: blend_util.py  smplx_support.py
smpl_psu/smplx_support/: body_segments.py  part_volume.py
smpl_psu/utils/: mesh_util.py  viz.py
src/blender_support/: smplx_support.py
src/smplx_support/: body_segments.py
src/utils/: viz.py
